# combustion

./: .coveragerc  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  Makefile  README.md  package-lock.json  package.json  pyrightconfig.json  requirements.dev.txt  requirements.docs.txt  requirements.quality.txt  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
combustion/: exceptions.py  version.py
combustion/data/: __init__.py  window.py
combustion/nn/: __init__.py
combustion/testing/: assertions.py  mixins.py
combustion/util/: __init__.py  compute.py  dataclasses.py  decorators.py  plot.py  typing.py  util.py  validation.py
combustion/vision/: __init__.py  anchors.py  convert.py  coords.py
conf/: config.yaml
conf/dataset/: cifar10.yaml  imagenet.yaml
conf/model/: resnet.yaml
conf/optimizer/: adam.yaml
conf/schedule/: default.yaml  one_cycle.yaml
conf/trainer/: local.yaml  test.yaml
docker/: Dockerfile
docker/common/: install_apex.sh
docker/cpu/: Dockerfile
docker/gpu/: Dockerfile
docs/: combustion.data.rst  combustion.lightning.rst  combustion.nn.loss.rst  combustion.nn.modules.rst  combustion.nn.rst  combustion.rst  combustion.testing.rst  combustion.util.rst  combustion.vision.rst  conf.py  data.rst  exceptions.rst  functional.rst  index.rst  lightning.rst  models.rst  modules.rst  nn.rst  optim.rst  points.rst  requirements.txt  testing.rst  util.rst  vision.rst
docs/_templates/: layout.html
examples/basic/: __main__.py  data.py  model.py
tests/: conftest.py  pytest.ini  test_main.py
(+352 files in other folders)
