[isort]
ensure_newline_before_comments = True
force_grid_wrap = 0
include_trailing_comma = True
known_first_party = combustion project
known_third_party =
  decorator
  git
  h5py
  hydra
  ignite
  kornia
  omegaconf
  matplotlib
  numpy
  packaging
  PIL
  pynvml
  pytorch_lightning
  pytorch-model-summary
  scipy
  sklearn
  torch
  torchtext
  torchvision
  torchviz
  torch_xla

line_length = 119
lines_after_imports = 2
multi_line_output = 3
use_parentheses = True

[metadata]
license_file = LICENSE
